src/yini_test/cases/golden/lenient/invalid/lists/missing-list-comma.yini
@yini

^ Lists
items = ["alpha" "beta"]
